# pamahres

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  start.sh
.github/workflows/: django.yml
app/: db.sqlite3  supabase_client.py
app/app/: celery.py  middleware.py  settings.py  urls.py
app/courses/: models.py  serializers.py  tests.py  urls.py  views.py
app/courses/migrations/: 0001_initial.py  0003_coursematerial_material_path.py  0006_remove_course_course_units_course_course_code_and_more.py  0008_alter_coursematerial_file_type.py  0009_course_course_description_course_last_updated_at.py
app/quiz/: gen_ai_tests.py  models.py  openai_generator.py  serializers.py  tasks.py  tests.py  urls.py  views.py
app/quiz/migrations/: 0002_quizmodel_course.py  0005_alter_questionoption_options_and_more.py  0008_alter_quizmodel_material_list.py  0009_remove_questionmodel_correct_answer_count_and_more.py  0011_quizmodel_last_taken.py  0012_alter_quizmodel_number_of_questions.py
app/user/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
app/user/migrations/: 0001_initial.py  0003_alter_profile_age_alter_profile_current_grade_and_more.py  0006_alter_profile_current_grade_and_more.py  0007_alter_useractivity_user.py  (+2 more)
app/utils/: openai_generator.py  pdf_processor.py  question_generator.py
client/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
client/src/: App.tsx  index.css  main.tsx
nginx/: nginx.conf
server/: Dockerfile  hello.py  pyproject.toml
server/app/: db.sqlite3  manage.py
(+154 files in other folders)
